# formodoro

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.mongo.yaml  docker-compose.yaml  pyproject.toml
formodoro/: db.py  main.py
